# c-programming-Karasev

./: README.md
practice-1/: Readme.md  cirlce.c  hello.c  multiply.c  sum.c  temperature.c
practice-10/: Readme.md
practice-10/task101/mathlib/: Makefile  README.md  main.c  mathutils.c  mathutils.h
practice-10/task102/strlib/: Makefile  README.md  main.c  strutils.c  strutils.h
practice-10/task103/project/: Makefile  README.md  main.c  mathutils.c  mathutils.h  strutils.c  strutils.h
practice-10/task104/calc/: Makefile  README.md  calc.c  calc.h  main.c
practice-11/: Readme.md
practice-11/task111/config_manager/: Makefile  README.md  config.json  config_manager.c
practice-11/task112/http_client/: Makefile  README.md  http_client.c
practice-11/task113/todo/: Makefile  README.md  todo.c
practice-11/task114/weather/: Makefile  README.md
practice-11/task114/weather/include/: db.h  http.h  weather.h
practice-11/task114/weather/src/: db.c  http.c  weather.c
practice-12/: Readme.md  task121.c  task122.c  task123.c  task124.c  task125.c  task126.c
practice-2/: Readme.md  task-21.c  task-22.c  task-23.c  task-24.c  task-25.c  task-26.c  task-27.c  task-28.c  task-29.c
practice-3/: Readme.md  task-31.c  task-32.c  task-33.c  task-34.c  task-35.c  task-36.c  task-37.c  task-38.c  task-39.c
practice-4/: Readme.md  task-A41.c  task-A42.c  task-A43.c  task-A44.c  task-A45.c  task-A46.c  task-A47.c  task-A48.c  task-B41.c  task-B410.c  task-B411.c  task-B42.c  task-B43.c  task-B44.c  task-B45.c  task-B46.c  task-B47.c  task-B48.c  task-B49.c
practice-5/: Readme.md  task51.c  task52.c  task53.c  task54.c  task55.c  task56.c  task57.c  task58.c
practice-6/: Readme.md  task61.c  task62.c  task63.c  task64.c  task65.c  task66.c  task67.c  task68.c
practice-7/: Readme.md  task71.c  task72.c  task73.c  task74.c  task75.c  task76.c  task77.c  task78.c
practice-8/: Readme.md
practice-8/task81/mathlib/: Makefile  meson.build
practice-8/task81/mathlib/include/: matlib.h  matrix.h  vector.h
practice-8/task81/mathlib/src/: basic.c  main.c  matrix.c  vector.c
practice-8/task81/mathlib/tests/: test_matlib.c
practice-8/task82/strlib/: Makefile  README.MD  meson.build
practice-8/task82/strlib/include/: strlib.h
practice-8/task82/strlib/src/: main.c  strlib_core.c  strlib_format.c  strlib_search.c
practice-8/task82/strlib/tests/: test_strlib.c
practice-8/task83/fileutils/: Makefile  README.md  meson.build
practice-8/task83/fileutils/include/: fileutils.h  io.h  path.h
practice-8/task83/fileutils/src/: io.c  main.c  path.c
practice-8/task83/fileutils/tests/: test_fileutils.c
practice-8/task84/httplib/: Makefile  meson.build
practice-8/task84/httplib/include/: http.h  http_request.h  http_response.h
practice-8/task84/httplib/src/: http_request.c  http_response.c  main.c
practice-8/task84/httplib/tests/: test_httplib.c
practice-8/task85/minitest/: Makefile  README.md  meson.build
practice-8/task85/minitest/include/: minitest.h
practice-8/task85/minitest/src/: main.c
practice-8/task85/minitest/tests/: test_minitest.c
practice-9/variantC_finance/: Makefile  README.md  meson.build
practice-9/variantC_finance/include/: data.h  storage.h  ui.h  utils.h
practice-9/variantC_finance/src/: data.c  main.c  storage.c  ui.c  utils.c
practice-9/variantC_finance/tests/: test_finance.c
